fix overflow horizontal

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,7 @@
-html,
-body {
+body, html{
     margin: 0px;
     padding: 0px;
     background-color: #f2f2f2;
-    max-width: 100%;
     overflow-x: hidden;
 }
 
